# ChangeLog for sci-chemistry/nwchem
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nwchem-6.5_p26243-r1 (12 Nov 2014)

  12 Nov 2014; Honza Macháček <Hloupy.Honza@centrum.cz>
  -nwchem-6.5_p26243.ebuild, +nwchem-6.5_p26243-r1.ebuild:
  Handling of 32-bit versus 64-bit integers in
  sci-chemistry/nwchem-6.5_p26243-r1 corrected.

*nwchem-6.5_p26243 (11 Nov 2014)

  11 Nov 2014; Honza Macháček <Hloupy.Honza@centrum.cz>
  +nwchem-6.5_p26243.ebuild, +files/nwchem-6.5-python_makefile.patch:
  Version bump to sci-chemistry/nwchem-6.5_p26243. IUSE options expanded,
  including those fore 64 bit integers and CUDA support. CCSDTQ and linear
  response for CCSDT+ methods selected unconditionally for now.

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> nwchem-6.3_p2-r1.ebuild:
  clean up

*nwchem-6.3_p2-r1 (07 Aug 2014)

  07 Aug 2014; Honza Macháček <Hloupy.Honza@centrum.cz>
  -nwchem-6.3-r1.ebuild, -nwchem-6.3-r2.ebuild, +nwchem-6.3_p2-r1.ebuild:
  Changed versioning to use the package patchlevel versus the ebuild revision
  properly. Compilation without MPI support tested and corrected. Options added
  to compile with OpenMP (not sure if it has any effect, setting the compiler
  flag only), to compile the large MRCC module skipped by default, and to build
  against system BLAS.

  19 Oct 2013; Honza Macháček <Hloupy.Honza@centrum.cz> nwchem-6.3-r2.ebuild:
  Arranged for the TeX fonts creation in the sandbox. This time really.

*nwchem-6.3-r2 (19 Oct 2013)

  19 Oct 2013; Honza Macháček <Hloupy.Honza@centrum.cz>
  +nwchem-6.3-r2.ebuild:
  Updated to 6.3 revision 2. The source directory name shortened to fit under
  the length restrictions in the makefiles. Arranged for the TeX fonts creation
  in the sandbox.

*nwchem-6.3-r1 (23 Jul 2013)

  23 Jul 2013; Honza Macháček <Hloupy.Honza@centrum.cz> -nwchem-6.3.ebuild,
  +nwchem-6.3-r1.ebuild, files/nwchem-6.1.1-adjust-dir-length.patch,